Update finance_assistant addon to v0.3.527

--- a/finance_assistant/config.yaml
+++ b/finance_assistant/config.yaml
@@ -1,7 +1,7 @@
 name: Finance Assistant
-description: Manage finances, sync with YNAB, and integrate with Home Assistant.
-version: "0.3.465"
-slug: finance_assistant
+description: "Manage finances, sync with YNAB, and integrate with Home Assistant."
+version: "0.3.527"
+slug: "finance_assistant"
 # upstream: "https://github.com/your-github-username/example-addon-repository"
 init: false
 startup: services
@@ -16,24 +16,24 @@ arch:
   - armhf
   - armv7
   - i386
-map:
-  - share:rw
-  - ssl
+# map:
+#   - share:rw
+#   - ssl
 ports:
   8000/tcp: 8000
-#  5001/tcp: null # Removing - not needed with ingress
+#   5001/tcp: null # Removing - not needed with ingress
 ports_description:
-  8000/tcp: "Direct API access (development only)"
-#  5001/tcp: Web interface (Not required for Ingress)
+  8000/tcp: "Direct API access (development/fallback)"
+#   5001/tcp: Web interface (Not required for Ingress)
 options:
   ynab_api_key: ""
   ynab_budget_id: ""
 schema:
   ynab_api_key: str
   ynab_budget_id: str
-stage: experimental
-url: "https://github.com/chbarnhouse/home-assistant-addons/tree/main/finance_assistant"
+# stage: experimental
+# url: "https://github.com/chbarnhouse/home-assistant-addons/tree/main/finance_assistant"
 # webui: "http://[HOST]:[PORT:5001]" # Relying on ingress
-homeassistant_api: true
+# homeassistant_api: true
 # devices: # Removing device access unless needed
 #   - /dev/dri
